# spbu-homework-C

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: clang-format.yml  main.yml
01.12.2025/: CMakeLists.txt  binaryCompare.c  queue.c  queue.h  queueTask.c
02.10.2025/: CMakeLists.txt  Makefile  bracesBalance.c  polishNotation.c  polishNotationIO.c  polishNotationIO.h  stack.c  stack.h
04.09.2025/: helloworld.c  helloworld.out
06.10.2025/: CMakeLists.txt  Makefile  recursiveList.c  recursiveList.h  recursiveList_exercise.c  sortedList.c  sortedList.h  sortedListTesting.c  sortedList_exercise.c
11.09.2025/: CMakeLists.txt  Makefile  calc_div.c  calculation_binom.c  first.c  forth.c  swap_segments.c  ticket_comb.c
13.10.2025/: Makefile  fibonacci.c  gnomeSort.c  palindrome.c
15.09.2025/: CMakeLists.txt  check_braces.c  count_substr.c  count_zeros.c
17.11.2025/: CMakeLists.txt  binaryNumbers.c  binaryNumbers.h  binaryRepresentation.c  doubleInternals.c
22.09.2025/: CMakeLists.txt  Makefile  how_to_build.md  merge_sort.c  sorter.c  sorter.h
